Fixed bug when update

--- a/My Journal - Core Data/My Journal - Core Data/Storyboards/Base.lproj/Main.storyboard
+++ b/My Journal - Core Data/My Journal - Core Data/Storyboards/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                             </subviews>
                                         </stackView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My name is Nick " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Zt-8U-bwl">
-                                            <rect key="frame" x="20" y="49.5" width="374" height="20.5"/>
+                                            <rect key="frame" x="20" y="41.5" width="374" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -51,7 +51,7 @@
                                         <constraint firstAttribute="trailing" secondItem="BrS-82-Z3m" secondAttribute="trailing" constant="20" id="5LJ-fJ-J0a"/>
                                         <constraint firstAttribute="trailing" secondItem="2Zt-8U-bwl" secondAttribute="trailing" constant="20" id="9NH-sG-wO3"/>
                                         <constraint firstItem="BrS-82-Z3m" firstAttribute="leading" secondItem="VnN-AX-1zt" secondAttribute="leading" constant="20" id="Vy6-1L-TCv"/>
-                                        <constraint firstAttribute="bottom" secondItem="2Zt-8U-bwl" secondAttribute="bottom" id="Xlx-f0-5Ak"/>
+                                        <constraint firstAttribute="bottom" secondItem="2Zt-8U-bwl" secondAttribute="bottom" constant="8" id="Xlx-f0-5Ak"/>
                                         <constraint firstItem="2Zt-8U-bwl" firstAttribute="leading" secondItem="VnN-AX-1zt" secondAttribute="leading" constant="20" id="ZVl-XU-nGx"/>
                                         <constraint firstItem="BrS-82-Z3m" firstAttribute="top" secondItem="VnN-AX-1zt" secondAttribute="top" constant="4" id="zf0-BN-zcF"/>
                                     </constraints>
