--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -11,20 +11,20 @@
         <scene sceneID="Aw6-zo-pvC">
             <objects>
                 <tableViewController id="83t-04-rzK" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XBP-mO-f0F">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XBP-mO-f0F">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" id="ZeF-XN-PoK" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="75"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZeF-XN-PoK" id="e76-Ia-Vr0">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Oz3-V7-ziT">
-                                            <rect key="frame" x="20" y="14.5" width="72" height="46"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Oz3-V7-ziT">
+                                            <rect key="frame" x="20" y="15.5" width="72" height="49"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VEm-9w-J15">
                                                     <rect key="frame" x="0.0" y="0.0" width="37.5" height="21.5"/>
@@ -33,7 +33,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOr-VL-Pd4">
-                                                    <rect key="frame" x="0.0" y="26.5" width="72" height="19.5"/>
+                                                    <rect key="frame" x="0.0" y="29.5" width="72" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -41,7 +41,7 @@
                                             </subviews>
                                         </stackView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sT4-5G-Wp8">
-                                            <rect key="frame" x="352.5" y="11" width="32.5" height="18"/>
+                                            <rect key="frame" x="352.5" y="15.5" width="32.5" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -49,7 +49,7 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="Oz3-V7-ziT" firstAttribute="leading" secondItem="e76-Ia-Vr0" secondAttribute="leadingMargin" id="2db-Nh-1cj"/>
-                                        <constraint firstItem="sT4-5G-Wp8" firstAttribute="top" secondItem="e76-Ia-Vr0" secondAttribute="topMargin" id="hph-2b-k2H"/>
+                                        <constraint firstItem="sT4-5G-Wp8" firstAttribute="top" secondItem="Oz3-V7-ziT" secondAttribute="top" id="Ce6-Hv-68q"/>
                                         <constraint firstItem="sT4-5G-Wp8" firstAttribute="leading" relation="lessThanOrEqual" secondItem="Oz3-V7-ziT" secondAttribute="trailing" constant="260.5" id="kjt-RR-tQ5"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="sT4-5G-Wp8" secondAttribute="trailing" constant="9" id="oSv-RN-phc"/>
                                         <constraint firstItem="Oz3-V7-ziT" firstAttribute="centerY" secondItem="e76-Ia-Vr0" secondAttribute="centerY" id="yyk-F8-5dd"/>
@@ -117,7 +117,11 @@
                         <viewLayoutGuide key="safeArea" id="XZC-je-CZz"/>
                     </view>
                     <navigationItem key="navigationItem" id="ast-iZ-JDX">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Rad-1j-IeA"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Rad-1j-IeA">
+                            <connections>
+                                <action selector="save:" destination="XAX-mr-OIx" id="BXi-7L-Zpo"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="7Bb-PC-YaP" id="Hh3-pd-VPe"/>
@@ -146,6 +150,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="o99-Eg-bIu"/>
+        <segue reference="dSC-Mj-zMF"/>
     </inferredMetricsTieBreakers>
 </document>
